--- a/trail_2_1.0.0.yaml
+++ b/trail_2_1.0.0.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
-  title: trail1
-  x-ibm-name: trail1
+  title: trail_2
+  x-ibm-name: trail_2
   version: 1.0.0
 x-ibm-configuration:
   cors:
@@ -27,7 +27,7 @@ x-ibm-configuration:
           verb: keep
           chunked-uploads: true
           persistent-connection: true
-          target-url: https://www.facebook.com
+          target-url: https://www.google.com
   properties:
     target-url:
       value: http://example.com/operation-name
@@ -38,7 +38,7 @@ x-ibm-configuration:
     success-content: activity
     error-content: payload
   application-authentication: {}
-basePath: /trail1
+basePath: /trail_2
 paths:
   /:
     get:
